@@ -12,4 +12,4 @@ cluttermm_config_DATA	= cluttermm-cairo-config.h
 
 pkgconfigdir		= $(libdir)/pkgconfig
 pkgconfig_DATA		= cluttermm-cairo-$(API_VER).pc
-
+DISTCLEANFILES = $(pkgconfig_DATA)
