@@ -1,3 +1,10 @@
+2008-05-06  Murray Cumming  <murrayc@murrayc.com>
+
+	* clutter-cairo/Makefile.am:
+	* clutter-gtk/Makefile.am:
+	* clutter/Makefile.am: Added the generated .pc files to DISTCLEANFILES 
+	to fix distcheck. 
+
 2008-04-22  Jonathon Jongsma  <jjongsma@gnome.org>
 
 	* clutter-cairo/cluttermm-cairo/private/Makefile.am:
